--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
@@ -23,9 +23,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest flake8
-
+          
       - name: Run linter
-        run: flake8 .
-
+        run: |
+          flake8 . --count --statistics
+          
       - name: Run tests
-        run: pytest
+        run: |
+          pytest -v --tb=short
