--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,23 +9,20 @@ on:
 jobs:
   check-code:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
+        
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-
+          
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest flake8
-
+          pip install flake8
+          
       - name: Run linter
         run: flake8 .
-
-      - name: Run tests
-        run: pytest
